# info-checker

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.bat  run.ps1  run.sh
src/system_info_checker/: __init__.py  app.py  collector.py
