[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-info-checker"
version = "1.0.0"
description = "A safe, read-only Windows desktop system information viewer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "System Info Checker Contributors" }]
dependencies = [
    "PySide6>=6.7",
    "psutil>=5.9",
]

[project.scripts]
system-info-checker = "system_info_checker.app:main"

[tool.setuptools.packages.find]
where = ["src"]
